packages/typ/tests/fixtures/diagnostics/0892_gadt_constructor_payload_bool_mismatch_04.ml.infer.expected
File "0892_gadt_constructor_payload_bool_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0892_gadt_constructor_payload_bool_mismatch_04 is not a valid module name.

File "0892_gadt_constructor_payload_bool_mismatch_04.ml", line 5, characters 38-39:
5 | let _ : bool expr_delta = EBool_delta 3
                                          ^
Error: The constant 3 has type int but an expression was expected of type
         bool
